2022-09-02

  * release v0.26.2

2022-08-31

  * Increase resistance and hp

2022-08-27

  * Significantly reduce multipliers, remove champions and siege from
  upgrade
  * release 0.26.1

2022-08-26

  * release 0.26.0