@@ -1,3 +1,7 @@
+2022-09-28
+
+  * add Champions and Siege, adjust lower armor and hp
+
 2022-09-02
 
   * release v0.26.2
